--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ AI agriculture disease detection.</p>
                         <div class="resume-item">
                             <h4>PhD in Computer Science</h4>
                             <h5>2018 - 2022</h5>
-                            <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>South Korea
+                            <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--South Korea
                             </p>
                             <p>
                                 “Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”.
@@ -310,8 +310,8 @@ AI agriculture disease detection.</p>
                         </div>
                         <div class="resume-item">
                             <h4>MS in Electronic Engineering</h4>
-                            <h5>2015 - 2017</h5>
-                            <p><em> University of Technology and Education </em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Vietnam
+                            <h5>2016 - 2018</h5>
+                            <p><em> University of Technology and Education </em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--Vietnam
                             </p>
                             <p>
                                 “Foreign Object Debris (FOD) Detection for Aviation via Image Processing Technology”.
@@ -321,7 +321,7 @@ AI agriculture disease detection.</p>
                         <div class="resume-item">
                             <h4>BE in Electronics and Telecommunications Engineering</h4>
                             <h5>2012 - 2016</h5>
-                            <p><em>Vietnam Aviation Academy</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Vietnam
+                            <p><em>Vietnam Aviation Academy</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--Vietnam
                             </p>
                             <p>
                                 “Face Recognition and License Plate Detection for Smart Parking”. 2016
@@ -334,94 +334,25 @@ AI agriculture disease detection.</p>
                         <div class="resume-item">
                             <h4>Post-doctoral Research Fellow</h4>
                             <h6><i class="fas fa-building"></i> Chonnam National University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>--South Korea</em>
                             </h6>
-                            <h5>2021-Current</h5>
+                            <h5>2022-Current</h5>
                             <ul>
-                                <li>Development of DL model to predict the progression of Alzheimer's Disease;</li>
-                                <li>Development of DL model to recognize human emotion from multiple modalities
-                                    (visual, audio, text, neuro-physiological signals, persionality, etc.) and social interaction context. </li>
+                                <li>Development of DL model to predict the overall survival days of Glioblastoma Patients;</li>
+                                <li>Development of DL model to detect scene text under occlusion. </li>
                             </ul>
                         </div>
                         <div class="resume-item">
                             <h4>Teaching Assistant</h4>
                             <h6><i class="fas fa-building"></i> Chonnam National University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>South Korea</em>
                             </h6>
-                            <h5>2021-2023</h5>
+                            <h5>2020-2022</h5>
                             <ul>
                                 <li>Supporting and evaluating students in class Advanced Project for AI Convergence.</li>
                             </ul>
                         </div>
-                        <div class="resume-item">
-                            <h4>Research Assistant</h4>
-                            <h6><i class="fas fa-building"></i> Chonnam National University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
-                            </h6>
-                            <h5>2020 (5 months)</h5>
-                            <ul>
-                                <li>Research and analyze the applications of AI in enhancing the security of biometrics authentication;</li>
-                                <li>Research on context-based emotion recognition in the wild.</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Research Visit</h4>
-                            <h6><i class="fas fa-building"></i> University of Oulu
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Oulu, Finland</em>
-                            </h6>
-                            <h5>2019 (2 weeks)</h5>
-                            <ul>
-                                <li>Visiting the Center for Machine Vision and Signal Analysis at the University of Oulu to learn the professional working environment here.</li>
-                                <li>Discussing and sharing opinions about current trend on emotion recognition topics using ML/DL;</li>                                
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Teaching Assistant</h4>
-                            <h6><i class="fas fa-building"></i> Chonnam National University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
-                            </h6>
-                            <h5>2018 (4 months)</h5>
-                            <ul>
-                                <li>Conduct necessary exercises of Data Structures course;</li>
-                                <li>Provide an overall understanding of the data structures as well as an understanding of the classroom process;</li>
-                                <li>Directly identify students' problems and help them to understand concepts and tools for working with data and 
-                                    have experience in analyzing real data.</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Research Assistant</h4>
-                            <h6><i class="fas fa-building"></i> Kookmin University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Seoul, S. Korea</em>
-                            </h6>
-                            <h5>2015 (6 months)</h5>
-                            <ul>
-                                <li>Working as a researcher in Smart Embedded System Lab (SESL);</li>
-                                <li>Doing a project of LED-color display through audio jack communication.</li>
-                            </ul>
-                        </div>
-                        <h3 class="resume-title">Outreach</h3>
-                        <div class="resume-item">
-                            <h4>Sport Festival</h4>
-                            <h6><i class="fas fa-building"></i> Vietnamese Student Association in Korea
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>S. Korea</em>
-                            </h6>
-                            <h5>2015-2016-2018</h5>
-                            <ul>
-                                <li>Participating an annual sport festival hold by the Vietnamese Students’ Association in Korea
-                                    (VSAK) to have a meet, communication and solidarity of student community.</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Spring Intership</h4>
-                            <h6><i class="fas fa-building"></i> Southern Power Information Technology Company
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Hochiminh, Vietnam</em>
-                            </h6>
-                            <h5>2014 (3 months)</h5>
-                            <ul>
-                                <li>Learning about the organizational structure of the IT company;</li>
-                                <li>Using devices in server room and deployment of software applications using C-sharp.</li>
-                            </ul>
-                        </div>
+                       
                     </div>
 
                 </div>
