--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <li>
                                 <b>Tran M-T</b>, Pelliccione Patrizio, T. Nguyen Phuong. <br>“<em> Lightweight-oriented classification using distillation learning and spatial information from tabular data</em>”.
                                 In: Applied Soft Computing
-                                192 (2026), p. 114798. DOI: https://doi.org/10.1016/j.asoc.2026.114798.
+                                192 (2026), p. 114798. DOI: 10.1016/j.asoc.2026.114798.
                                 <a
                                     href="https://doi.org/10.1016/j.asoc.2026.114798">Elsevier</a>
                             </li>
@@ -200,7 +200,7 @@
                             <li>
                                 <b>Tran M-T</b>, Arianna Fedeli, Juan Antonio Piñera García,  Pelliccione Patrizio, T. Nguyen Phuong <br>“<em>Noise-Reduction-Oriented Super-Resolution Reconstruction for Precision Agriculture Applications</em>”.
                                 In: Expert Systems with Applications
-                                307 (2026), p. 131036. DOI: https://doi.org/10.1016/j.eswa.2025.131036.
+                                307 (2026), p. 131036. DOI: 10.1016/j.eswa.2025.131036.
                                 <a
                                     href="https://doi.org/10.1016/j.eswa.2025.131036">Elsevier</a>
                             </li>
@@ -208,11 +208,11 @@
 
 
                             <li>
-                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
-                                In: IEEE Access
-                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
+                                <b>Tran M-T</b>, and Lee G-S. <br>“<em>Occluded scene text detection via context-awareness from sketch-level image representations</em>”.
+                                In: Multimedia Systems
+                                31, 192 (2025). DOI: 10.1007/s00530-025-01782-w.
                                 <a
-                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
+                                    href="https://doi.org/10.1007/s00530-025-01782-w/">IEEE</a>
                             </li>
 
 
