--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 
                             <li>
-                                Kim Dung Nguyen, Yeong Soo Choi, Jang Hoon Lee, <b>Tran M-T</b>b>, XiangHui Xin. <br>“<em>An effective deep learning model for classifying diseases on strawberry leaves and estimating their severity based on the multi-task U‑Net</em>”.
+                                Kim Dung Nguyen, Yeong Soo Choi, Jang Hoon Lee, <b>Tran M-T</b>, XiangHui Xin. <br>“<em>An effective deep learning model for classifying diseases on strawberry leaves and estimating their severity based on the multi-task U‑Net</em>”.
                                 In: Multimedia Tools and Applications
                                 84, (2024), p. 31329–31350. DOI: 10.1007/s11042-024-20413-6.
                                 <a
