--- a/index.html
+++ b/index.html
@@ -721,6 +721,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/15.jpg" class="img-fluid" alt="">
 
+                  <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/16.jpg" class="img-fluid" alt="">
+
             </div>
           </div>
 
