--- a/index.html
+++ b/index.html
@@ -517,6 +517,14 @@
                       </div>
 
                       <div class="progress">
+                          <span class="skill">Italian<i class="val">Basic</i></span>
+                          <div class="progress-bar-wrap">
+                              <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+                                  aria-valuemax="100"></div>
+                          </div>
+                      </div>
+
+                      <div class="progress">
                           <span class="skill">Korean<i class="val">Basic</i></span>
                           <div class="progress-bar-wrap">
                               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0"
