--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                       <div class="progress">
                           <span class="skill">Vietnamese<i class="val">Mothertongue</i></span>
                           <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                   aria-valuemax="100"></div>
                           </div>
                       </div>
@@ -806,7 +806,7 @@ considering also the collaboration and cooperation with humans. <a href="https:/
                 <div class="owl-carousel testimonials-carousel">
 
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/testimonials/prof-patrizio.png" class="testimonial-img" alt="">
+                        <img src="assets/img/testimonials/pat.jpg" class="testimonial-img" alt="">
                         <h3>Patrizio Pelliccione</h3>
                         <h4><b>Professor</b></h4>
                         <h4>Department of Computer Science</h4>
